feat: update scan-type configuration paramter to enable directory scanning

--- a/plugin.yml
+++ b/plugin.yml
@@ -23,6 +23,7 @@ configuration:
     scan-type:
       type: string
       enum:
+        - dir
         - docker
         - iac  
     show-secret-snippets:
