chore: add default value to json schema for output-format

--- a/plugin.yml
+++ b/plugin.yml
@@ -16,6 +16,7 @@ configuration:
         - human
         - json
         - sarif
+      default: human
     parameter-files:
       type: string
     path:
