fix: update pipeline for shellcheck shared.bash

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -9,6 +9,7 @@ steps:
       - shellcheck#v1.3.0:
           files:
             - hooks/**
+            - lib/**
 
   - label: ":shell: Tests"
     plugins:
