SUP-3846: Add additional File Output Formats (#28)
* feat: produce additional output file for non-human output formats

* feat: update parameters and format

* docs: update README to reflect parameter changes

* feat: reflect paramter changes in hook

* test: reflect parameter changes in tests

* fix: add set -e to ensure hook doesn't silently fail

* chore: remove version, pin images and remove Read Only

* feat/fix: add shared lib for handling reading env vars correctly for strings or arrays parameters

* Revert "fix: add set -e to ensure hook doesn't silently fail"

This reverts commit f0bc9756f85c09b145909b34418869a9e708d437.

* fix/test: correct Env Var used to read and add test

* fix: make shared.bash executable for shellcheck

* fix: update pipeline for shellcheck shared.bash

* chore: re-add read-only for volume mounts as read-write not required

* feat: add check for duplicate file formats
* set a default output that will be used for the Build Annotations so that can be refactored separately
* added notes for future changes required for loop to support multiple output files with the same file format per Wiz CLI docs

Signed-off-by: Tom Watt <tom@buildkite.com>

* tests: add tests for duplicate file output formats

Signed-off-by: Tom Watt <tom@buildkite.com>

* docs/chore: file-output-format is optional with no default

Signed-off-by: Tom Watt <tom@buildkite.com>

---------

Signed-off-by: Tom Watt <tom@buildkite.com>
Co-authored-by: Shimon Ulewicz <sulewicz@groq.com>

--- a/plugin.yml
+++ b/plugin.yml
@@ -10,13 +10,20 @@ configuration:
       type: string
     image-address:
       type: string
-    output-format:
+    scan-format:
       type: string
       enum:
         - human
         - json
         - sarif
       default: human
+    file-output-format:
+      type: [string, array]
+      enum:
+        - human
+        - json
+        - sarif
+        - csv-zip
     parameter-files:
       type: string
     path:
@@ -26,7 +33,7 @@ configuration:
       enum:
         - dir
         - docker
-        - iac  
+        - iac
     show-secret-snippets:
       type: boolean
       default: false
@@ -34,10 +41,10 @@ configuration:
       type: string
       enum:
         - Ansible
-        - AzureResourceManager 
-        - Cloudformation 
-        - Dockerfile 
-        - GoogleCloudDeploymentManager 
+        - AzureResourceManager
+        - Cloudformation
+        - Dockerfile
+        - GoogleCloudDeploymentManager
         - Kubernetes
         - Terraform
   required:
